--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "expo": "~49.0.8",
     "expo-location": "^16.1.0",
     "expo-sqlite": "~11.3.3",
