--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.6.0",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-location": "^16.1.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.7.1",
     "react-native-web": "~0.19.6"
   },
