--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "axios": "^1.6.0",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
