--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
     "expo": "~49.0.8",
     "expo-font": "~11.4.0",
@@ -22,6 +24,8 @@
     "react-native": "0.72.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.7.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
