--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.72.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.7.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6"
