--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-location": "^16.1.0",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "google-libphonenumber": "^3.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
