--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
     "expo": "~49.0.8",
+    "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "^16.1.0",
+    "expo-notifications": "~0.20.1",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "google-libphonenumber": "^3.2.33",
