--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
-    "expo": "~49.0.8",
+    "expo": "^50.0.6",
     "expo-device": "~5.4.0",
     "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
