--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.0",
     "expo": "^50.0.6",
-    "expo-device": "~5.4.0",
-    "expo-font": "~11.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-location": "^16.1.0",
-    "expo-notifications": "~0.20.1",
-    "expo-sqlite": "~11.3.3",
-    "expo-status-bar": "~1.6.0",
+    "expo-device": "5.9.3",
+    "expo-font": "11.10.2",
+    "expo-linear-gradient": "12.7.1",
+    "expo-location": "16.5.3",
+    "expo-notifications": "0.27.6",
+    "expo-sqlite": "13.2.2",
+    "expo-status-bar": "1.11.1",
     "google-libphonenumber": "^3.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.73.4",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.7.1",
-    "react-native-safe-area-context": "^4.7.4",
+    "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.0"
+    "@expo/webpack-config": "^19.0.1"
   },
   "private": true
 }
