add ITSAppUsesNonExemptEncryption to avoid App Store Connect encryption step

--- a/app.json
+++ b/app.json
@@ -22,6 +22,9 @@
     ],
     "ios": {
       "supportsTablet": true,
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      },
       "bundleIdentifier": "com.adventurelandinstitute.ketchupclub"
     },
     "android": {
