update name of app in app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ketchup-club",
+    "name": "Ketchup Club",
     "slug": "ketchup-club",
     "version": "1.0.12",
     "orientation": "portrait",
