--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
