--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/google-libphonenumber": "^7.4.30",
     "axios": "^1.6.0",
     "dotenv": "^16.4.4",
     "expo": "^50.0.6",
