--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-firebase/app": "^18.9.0",
+    "@react-native-firebase/auth": "^18.9.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/google-libphonenumber": "^7.4.30",
     "axios": "^1.6.0",
     "dotenv": "^16.4.4",
     "expo": "^50.0.6",
+    "expo-build-properties": "^0.11.1",
     "expo-dev-client": "~3.3.8",
     "expo-device": "5.9.3",
     "expo-font": "11.10.2",
@@ -35,7 +39,7 @@
     "react-native-screens": "^3.27.0",
     "react-native-web": "~0.19.6",
     "typescript": "^5.3.0",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
