--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-sqlite": "13.2.2",
     "expo-status-bar": "1.11.1",
     "google-libphonenumber": "^3.2.33",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
