Trying to get git to accept a file rename with capitalization

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-native-firebase/app": "^18.9.0",
     "@react-native-firebase/auth": "^18.9.0",
     "@react-native-firebase/firestore": "^19.0.0",
+    "@react-native-firebase/messaging": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/google-libphonenumber": "^7.4.30",
+    "@types/lodash": "^4.14.202",
     "axios": "^1.6.0",
     "dotenv": "^16.4.4",
     "expo": "^50.0.6",
